--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     <a class="nav-link" href="ratings.html">Վարկանիշ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Կապ մեզ հետ</a>
+                                    <a class="nav-link" href="contacts.html">Կապ մեզ հետ</a>
                                 </li>
                             </ul>
                         </div>
@@ -60,76 +60,76 @@
                             <h2>Նոր ֆիլմեր</h2>
                             <hr>
                             <div class="row">
-                                <div class="col-12 col-sm-6 col-md-3">
+                                <a href="films.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/badboys.jpg" class="card-img-top" alt="bad boys film">
                                         <div class="card-body">
                                             <p class="card-text">Bad Boys</p>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-sm-6 col-md-3">
+                                </a>
+                                <a href="films.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/joker.jpg" class="card-img-top" alt="joker film">
                                         <div class="card-body">
                                             <p class="card-text">Joker</p>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-sm-6 col-md-3">
+                                </a>
+                                <a href="films.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/jumanji.jpg" class="card-img-top" alt="jumanji film">
                                         <div class="card-body">
                                             <p class="card-text">Jumanji</p>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-sm-6 col-md-3">
+                                </a>
+                                <a href="films.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/sonic.jpg" class="card-img-top" alt="sonic film">
                                         <div class="card-body">
                                             <p class="card-text">Sonic</p>
                                         </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                         </div>
                         <div class="film-groups">
                             <h2>Նոր սերիալներ</h2>
                             <hr>
                             <div class="row">
-                                <div class="col-12 col-sm-6 col-md-3">
+                                <a href="serials.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/bardzrlarum.webp" class="card-img-top" alt="Bardzr Larum film">
                                         <div class="card-body">
                                             <p class="card-text">Բարձր լարում</p>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-sm-6 col-md-3">
+                                </a>
+                                <a href="serials.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/misisdevis.webp" class="card-img-top" alt="Miss Devis film">
                                         <div class="card-body">
                                             <p class="card-text">Միսս Դեվիս</p>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-sm-6 col-md-3">
+                                </a>
+                                <a href="serials.html" class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/meznicverjinnery.webp" class="card-img-top" alt="Meznic verjinnery film">
                                         <div class="card-body">
                                             <p class="card-text">Մեզնից վերջինները</p>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-sm-6 col-md-3">
+                                </a>
+                                <a href="serials.html"  class="col-12 col-sm-6 col-md-3">
                                     <div class="card">
                                         <img src="assets/img/citadel.webp" class="card-img-top" alt="Citadel film">
                                         <div class="card-body">
                                             <p class="card-text">Ցիտադել</p>
                                         </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                         </div>
 
@@ -192,7 +192,7 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="card margin-top-55">
+                        <div class="card margin-top-55 mb-5">
                             <div class="card-header">
                                Ֆիլմերի վարկանիշ
                             </div>
@@ -225,11 +225,64 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="container">
-                <p><a href="https://it-lezoo.com">IT lezoo</a></p>
+        <footer class="text-lg-start text-white">
+            <div class="container py-4 pb-0">
+                <div class="row">
+                    <!-- Grid column -->
+                    <div class=" text-center col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h5 class="text-uppercase mb-4 font-weight-bold">
+                            IT Kino
+                        </h5>
+                        <p class="font-weight-lighter">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra dolor sed est pretium, laoreet finibus risus sollicitudin. Nulla ultricies congue accumsan. 
+                        </p>
+                    </div>
+                    <div class=" text-center col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h5 class="text-uppercase mb-4 font-weight-bold">Follow us there:</h5>
+                        <!-- Facebook -->
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button">
+                            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                        </a>
+                        <!-- Twitter -->
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button">
+                            <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                        </a>
+                        <!-- Google -->
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button">
+                            <i class="fa fa-google" aria-hidden="true"></i>
+                        </a>
+            
+                        <!-- Instagram -->
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <!-- Grid column -->
+                    <div class=" text-center col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h5 class="text-uppercase mb-4 font-weight-bold">Contacts</h5>
+                        <p>
+                            <i class="fa fa-map-marker mr-2" aria-hidden="true"></i> 
+                            Address
+                        </p>
+                        <p>
+                            <i class="fa fa-envelope-o mr-2" aria-hidden="true"></i> 
+                            itlezoo@gmail.com
+                        </p>
+                        <p>
+                            <i class="fa fa-phone mr-2" aria-hidden="true"></i> 
+                            + 01 234 567 88</p>
+                        <p>
+                            <i class="fa fa-phone mr-2" aria-hidden="true"></i> 
+                            + 01 234 567 89</p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center font-weight-lighter p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                © 2020 Copyright:
+                <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
             </div>
         </footer>
+
         <!-- Optional JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
